Fix text wrapping on product order URL buttons

--- a/less/content.less
+++ b/less/content.less
@@ -605,6 +605,7 @@ ul + p {
         background: @brand-primary;
         font-size: @font-size-base;
         line-height: @line-height-computed;
+        white-space: normal;
       }
     }
   }
